# AutoRescue

./: .cognito_client_info  .cognito_oauth_config  .cognito_user_pool_id  .gitignore  AGENT_RUNTIME_INTEGRATION.md  AWS_CREDENTIALS_FIX.md  CLEANUP_SUMMARY.md  CLOUDFORMATION_DEPLOY.md  CLOUDFORMATION_DEPLOYMENT.md  CLOUDFORMATION_SECURITY_NOTE.md  DEPENDENCIES.md  DEPLOY.md  DEPLOYMENT.md  DEPLOY_OFFER_PRICE.md  GATEWAY_TEST_RESULTS.md  LAMBDA_DEPLOYMENT.md  LAMBDA_LOGGING_UPDATE.md  LAMBDA_REFACTORING.md  LAMBDA_TESTING.md  LAMBDA_WORKING.md  NEXT_STEPS.md  PRICING_WORKFLOW.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SCRIPTS_SUMMARY.md  SECRETS_MANAGER_TEST_RESULTS.md  SECURITY_COMPLETE.md  SECURITY_REMEDIATION.md  SECURITY_REMEDIATION_SUMMARY.md  TESTING.md  UV_QUICK_REF.md  UV_SETUP.md  amadeus_mcp_tools.py  app.py  appspec.yml  buildspec.yml  cloudformation-ec2.yaml  (+15 more)
.streamlit/: secrets.toml
agent_runtime/: .bedrock_agentcore.yaml  Dockerfile  README.md  autorescue_agent.py  requirements.txt
deploy/: cicd-pipeline-v2.yaml  cicd-pipeline.yaml  resource-template-v1.yaml  resource-template-v2.yaml  resource-template.yaml
mcp_tools/: analyze_disruption.json  book_flight.json  offer_price.json  search_flights.json
scripts/: README.md  add_gateway_targets.py  after_install.sh  agentcore_gateway.py  agentcore_memory.py  apply_iam_policies.sh  before_install.sh  cleanup.sh  cleanup_lambdas.sh  cleanup_project.sh  cognito_credentials_provider.py  create_agent_version.py  create_agentcore_gateway.py  deploy_agent_runtime.py  (+27 more)
(+27 files in other folders)
