[project]
name = "autorescue"
version = "0.1.0"
description = "AI-powered flight booking and cancellation assistant using AWS Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit==1.50.0",
    "streamlit-authenticator==0.4.2",
    "watchdog==6.0.0",
    "agentcore>=0.1.0",
    "boto3==1.40.52",
    "botocore==1.40.52",
    "requests==2.32.5",
    "python-dotenv==1.1.1",
    "pydantic==2.10.5",
    "typing-extensions>=4.13.2",
    "bedrock-agentcore-starter-toolkit>=0.1.25",
    "bcrypt>=4.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "black==24.10.0",
    "flake8==7.1.2",
    "mypy==1.14.1",
]
